# Toybox-Spd-Logging-Plugin

./: .gitignore  CMakeLists.txt  README.md  Spd Logging.plugin  premake5.lua
Source/: LoggerFactory.cpp  LoggerFactory.h  LoggerFactoryPlugin.cpp  LoggerFactoryPlugin.h  SpdLogger.cpp  SpdLogger.h  SpdLoggerPlugin.cpp  SpdLoggerPlugin.h
